syntax = "proto3";

import "google/protobuf/empty.proto";

package cashu_grpc_service;

service Cashu {
    rpc InternalTokenMint (InternalTokenMintRequest) returns (InternalTokenMintResponse);
    rpc CreateMint (CreateMintRequest) returns (CreateMintResponse);
}

message InternalTokenMintRequest {
    string service_name = 1;
    string mint_id = 2;
    uint64 amount_sat = 3;
}

message InternalTokenMintResponse {
    string token = 1;
}

message CreateMintRequest {
    string name = 1;
    string secret = 2;
    string derivation_path = 3;
    int32 max_order = 4;
    uint64 min_fee_reserve_msat = 5;
    float percent_fee_reserve = 6;
    string description = 7;
    string description_long = 8;
    map<string, string> contact = 9;
    string motd = 10;
    string version = 11;
}

message CreateMintResponse {

}